tests/extensions/forLoops/valid/forVariableScope.wacc
# Prints a copy of range 2 - 7

# Output:
# 2 : 2
# 3 : 3
# 4 : 4
# 5 : 5
# 6 : 6
# 14

begin
    int p = 7 ;
	for (int i = 2; i < 7; i = i + 1) do
        int p ;
        p = i ;
		print i ;
        print " : " ;
        print p ;
        println " "
	done ;
    println p * 2 
end