tests/extensions/forLoops/syntaxErr/forBadExit2.wacc
# error -> i > 'a'

# Output:
# semantic_error

# Exit:
# 100

begin
  for (exit 5; i < 'a'; i = i + 1) do
    skip
  done
end